--- a/event.html
+++ b/event.html
@@ -30,6 +30,16 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="fav/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
+
+    <!-- Global site tag (gtag.js) - Google Ads: 672890273 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-672890273"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'AW-672890273');
+    </script>
   </head>
   
   <body>
@@ -78,8 +88,9 @@
           <div class='plan_boxs'><a class='plan_ok' href="event.html">特色活動</a></div>
           <div class='plan_boxs'><a href="event_1.html">燈會小提燈</a></div>
           <div class='plan_boxs'><a href="event_2.html">刷市民卡換小禮物</a></div>
-          <div class='plan_boxs'><a href="event_3.html">景點推薦</a></div>
+          <div class='plan_boxs'><a href="event_3.html">日遊桃園夜賞燈會</a></div>
           <div class='plan_boxs'><a href="event_4.html">手作提燈</a></div>
+          <div class='plan_boxs'><a href="event_5.html">合照送好禮</a></div>
         </div>
 
         <!-- 01 -->
@@ -116,6 +127,7 @@
         <div class='lantern_boxs'>
           <div class='lantern_title sec_title'>2020龍潭迎古董接財神</div>
           <div class='program_boxs'>
+            <a class='a_btn' href="https://www.facebook.com/2020%E9%BE%8D%E6%BD%AD%E8%BF%8E%E5%8F%A4%E8%91%A3%E6%8E%A5%E8%B2%A1%E7%A5%9E-540101629700929/?ref=page_internal" target="_blank">活動FB連結</a>
             <span class='padbot20'>
               「迎古董、接財神」是龍潭的百年傳統。「迎古董」可追溯至日本昭和時期，龍潭分為上街及下街，元宵節期間上、下街居民互相揶揄調侃，是市民的生活樂趣；「接財神」藉由祭祀財神爺以增添財運。
             </span>
@@ -132,6 +144,7 @@
         <div class='lantern_boxs'>
           <div class='lantern_title sec_title'>2020靚靚楊梅慶元宵</div>
           <div class='program_boxs'>
+            <a class='a_btn' href="https://www.facebook.com/2020%E9%9D%9A%E9%9D%9A%E6%A5%8A%E6%A2%85%E6%85%B6%E5%85%83%E5%AE%B5-110792130425678/" target="_blank">活動FB連結</a>
             <span class='padbot20'>
               楊梅地區每逢元宵時節「初九南巡進香、初十二花燈迎媽祖遶境」的傳統已流傳近百年，藉此活動傳承花燈踩街文化。
             </span>
@@ -183,6 +196,11 @@
       <div class='f_type_boxs'>
         <p class='f_type fw10 fwb'>協辦單位：</p>
         <p class='f_type fw90'>桃園市政府人事處、工務局、文化局、水務局、民政局、交通局、社會局、消防局、教育局、經發局、農業局、養工處、新聞處、衛生局、環保局、警察局、中壢區公所、平鎮區公所、交通部鐵道局、桃園大眾捷運股份有限公司、桃園航空城股份有限公司、桃園市新住民聯合服務中心</p>
+      </div>
+
+      <div class='f_type_boxs'>
+        <p class='f_type fw10 fwb'>協力廠商：</p>
+        <p class='f_type fw90'>GOGORO、中華EMOVING、當代牙醫、TOKUYO</p>
       </div>
     </div>
 
