--- a/event_4.html
+++ b/event_4.html
@@ -30,6 +30,16 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="fav/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
+
+    <!-- Global site tag (gtag.js) - Google Ads: 672890273 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-672890273"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'AW-672890273');
+    </script>
   </head>
   
   <body>
@@ -78,18 +88,25 @@
           <div class='plan_boxs'><a href="event.html">特色活動</a></div>
           <div class='plan_boxs'><a href="event_1.html">燈會小提燈</a></div>
           <div class='plan_boxs'><a href="event_2.html">刷市民卡換小禮物</a></div>
-          <div class='plan_boxs'><a href="event_3.html">景點推薦</a></div>
+          <div class='plan_boxs'><a href="event_3.html">日遊桃園夜賞燈會</a></div>
           <div class='plan_boxs'><a class='plan_ok' href="event_4.html">手作提燈</a></div>
+          <div class='plan_boxs'><a href="event_5.html">合照送好禮</a></div>
         </div>
 
-        <div class='show_boxs'>
+        <div class='news_box'>
+          <p class='add_type' title="燈會期間每天舉辦兩場次：">第一場次：18:00-19:00；第二場次：19:30-20:30</p>
+          <p class='add_type' title="每天開放現場報名時間：">17:30起30分鐘內、19:00起30分鐘內</p>
+        </div>
 
+        <div class='news_box'><a href="">2020桃園燈會手作提燈館-心願認養：http://new.web-maker.com.tw/hand-made-lantern/adopt.html</a></div>
+
+        <div class='show_boxs'>
           <div class='show_box'>
             <div class='sb_l'><img src="img/ee01.png"></div>
             <div class='sb_r'>
               <div class='s_name' title="1月31日（五）課程主題：">月桃葉/林投葉手編提燈</div>
               <div class='s_type'>
-                用葉片也能製作出精美的提燈？</br>這個想像可能存在於許多民眾的童年回憶，卻也可能讓不少人感到陌生與疑惑。這次在2020桃園燈會手作提燈館，將讓民眾有機會利用葉片製作出玲瓏小巧的提燈。課程中主要使用的材料有兩種，一種是月桃葉，另一種是林投葉。授課老師會為各位介紹葉片的差異，示範如何透過交織的方式讓葉片形成立體堅固的提燈。於提燈中塞入LED燈，取一根樹枝綁上細線牽起提燈，充滿濃郁草葉香氣的提燈就把玩於手中！
+                用葉片也能製作出精美的提燈？這個想像可能存在於許多民眾的童年回憶，卻也可能讓不少人感到陌生與疑惑。這次在2020桃園燈會手作提燈館，將讓民眾有機會利用葉片製作出玲瓏小巧的提燈。課程中主要使用的材料有兩種，一種是月桃葉，另一種是林投葉。授課老師會為各位介紹葉片的差異，示範如何透過交織的方式讓葉片形成立體堅固的提燈。於提燈中塞入LED燈，取一根樹枝綁上細線牽起提燈，充滿濃郁草葉香氣的提燈就把玩於手中！
               </div>
             </div>
           </div>
@@ -232,6 +249,11 @@
       <div class='f_type_boxs'>
         <p class='f_type fw10 fwb'>協辦單位：</p>
         <p class='f_type fw90'>桃園市政府人事處、工務局、文化局、水務局、民政局、交通局、社會局、消防局、教育局、經發局、農業局、養工處、新聞處、衛生局、環保局、警察局、中壢區公所、平鎮區公所、交通部鐵道局、桃園大眾捷運股份有限公司、桃園航空城股份有限公司、桃園市新住民聯合服務中心</p>
+      </div>
+
+      <div class='f_type_boxs'>
+        <p class='f_type fw10 fwb'>協力廠商：</p>
+        <p class='f_type fw90'>GOGORO、中華EMOVING、當代牙醫、TOKUYO</p>
       </div>
     </div>
 
