--- a/event_5.html
+++ b/event_5.html
@@ -54,9 +54,9 @@
       <div class='i_menu'><a href="index.html">首&nbsp;&nbsp;頁</a></div>
       <div class='i_menu'><a href="news.html">最新消息</a></div>
       <div class='i_menu'><a href="about.html">關於燈會</a></div>
-      <div class='i_menu'><a class='aac' href="lantern_1.html">燈區介紹</a></div>
+      <div class='i_menu'><a href="lantern_1.html">燈區介紹</a></div>
       <div class='i_menu'><a href="show.html">表演節目</a></div>
-      <div class='i_menu'><a href="event.html">活動資訊</a></div>
+      <div class='i_menu'><a class='aac' href="event.html">活動資訊</a></div>
       <div class='i_menu'><a href="traffic.html">交通資訊</a></div>
 
       <!-- mobile -->
@@ -80,46 +80,31 @@
       <div class='cent_box'>
         <div class='tag_boxs'>
           <a class='tag_a' href="index.html">首頁</a>
-          <a class='tag_a' href="lantern_1.html">燈區介紹</a>
-          <a class='tag_a' href="lantern_1.html">飛天曙(鼠)光燈區</a>
-          <a class='tag_a' href="lantern_115.html">翠堤之光</a>
+          <a class='tag_a' href="event.html">活動資訊</a>
+          <a class='tag_a' href="event_5.html">合照送好禮</a>
         </div>
 
-        <div class='little_boxs'>
-          <a href="lantern_1.html" class='little03 l_ok'>飛天曙(鼠)光燈區</a>
-          <a href="lantern_2.html" class='little03'>大地曙(鼠)光燈區</a>
-          <a href="lantern_3.html" class='little03'>銀河曙(鼠)光燈區</a>
+         <div class='news_box'>
+          <div class='plan_boxs'><a href="event.html">特色活動</a></div>
+          <div class='plan_boxs'><a href="event_1.html">燈會小提燈</a></div>
+          <div class='plan_boxs'><a href="event_2.html">刷市民卡換小禮物</a></div>
+          <div class='plan_boxs'><a href="event_3.html">日遊桃園夜賞燈會</a></div>
+          <div class='plan_boxs'><a href="event_4.html">手作提燈</a></div>
+          <div class='plan_boxs'><a class='plan_ok' href="event_5.html">合照送好禮</a></div>
         </div>
 
-        <div class='news_box'>
-          <div class='plan_boxs'><a href="lantern_101.html">光之飛航秀</a></div>
-          <div class='plan_boxs'><a href="lantern_102.html">光之森林</a></div>
-          <div class='plan_boxs'><a href="lantern_103.html">光之迷宮</a></div>
-          <div class='plan_boxs'><a href="lantern_104.html">飛天曙(鼠)光秀</a></div>
-          <div class='plan_boxs'><a href="lantern_105.html">麒麟迎賓</a></div>
-          <div class='plan_boxs'><a href="lantern_106.html">光之天幕</a></div>
-          <div class='plan_boxs'><a href="lantern_107.html">光之天橋</a></div>
-          <div class='plan_boxs'><a href="lantern_108.html">光之幻境</a></div>
-          <div class='plan_boxs'><a href="lantern_109.html">鼠光正亮</a></div>
-          <div class='plan_boxs'><a href="lantern_110.html">閃傘動人</a></div>
-          <div class='plan_boxs'><a href="lantern_111.html">光之祈球</a></div>
-          <div class='plan_boxs'><a href="lantern_112.html">星海琉光</a></div>
-          <div class='plan_boxs'><a href="lantern_113.html">珠光落玉</a></div>
-          <div class='plan_boxs'><a href="lantern_114.html">光之漫遊</a></div>
-          <div class='plan_boxs'><a class='plan_ok' href="lantern_115.html">翠堤之光</a></div>
+        <div class='lantern_boxs'>
+          <!-- <div class='lantern_title sec_title'>刷市民卡送好禮</div> -->
+
+          <div class='program_boxs'>
+            <!-- <span class='padbot20'>
+              活動期間每日6點起於新勢公園(飛天曙光燈區)、老街溪河岸公園(銀河曙光燈區)、光明公園(大地曙光燈區)服務台刷卡，即可兌換紀念品一份，數量有限，送完為止。
+            </span>
+            <a href="https://card.tycg.gov.tw/ap/index.aspx" target="_blank">桃園市民卡主題網：https://card.tycg.gov.tw/ap/index.aspx</a> -->
+        
+            <img src="img/e03.png">
+          </div>
         </div>
-
-        <div class='news_box'>
-          <p class='p_title'>翠堤之光</p>
-        </div>
-
-        <!-- <p class='add_type pad20' title='地點：'>平鎮新勢公園</p> -->
-
-        <p class='p_cent_type pad20'>
-          橫跨老街溪的翠提橋，是往來河岸兩側的行人、自行車騎士最愛，也是最安全、便捷的通道，夜晚的翠提橋，更搭起色彩絢爛的光之隧道，絕對是合影留念的最佳去處。
-        </p>
-
-        <img class='all_img' src="img/l01_15.png">
       </div>
     </div>
 
