--- a/lantern_109.html
+++ b/lantern_109.html
@@ -30,6 +30,16 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="fav/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
+
+    <!-- Global site tag (gtag.js) - Google Ads: 672890273 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-672890273"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'AW-672890273');
+    </script>
   </head>
   
   <body>
@@ -106,7 +116,7 @@
         <!-- <p class='add_type pad20' title='地點：'>平鎮新勢公園</p> -->
 
         <p class='p_cent_type pad20'>
-          你可以再靠近一點!趕快來跟2020桃園燈會主視覺和超級可愛的小倉鼠近距離合影留念，一起同樂，不論白天夜晚快快坐下，一起擺個卡哇伊的POSE吧！
+          你可以再靠近一點!趕快來跟超級可愛的小老鼠近距離合影留念，一起同樂，不論白天夜晚快快坐下，一起擺個卡哇伊的POSE吧！
         </p>
 
         <img class='all_img' src="img/l01_09.png">
@@ -128,6 +138,11 @@
       <div class='f_type_boxs'>
         <p class='f_type fw10 fwb'>協辦單位：</p>
         <p class='f_type fw90'>桃園市政府人事處、工務局、文化局、水務局、民政局、交通局、社會局、消防局、教育局、經發局、農業局、養工處、新聞處、衛生局、環保局、警察局、中壢區公所、平鎮區公所、交通部鐵道局、桃園大眾捷運股份有限公司、桃園航空城股份有限公司、桃園市新住民聯合服務中心</p>
+      </div>
+
+      <div class='f_type_boxs'>
+        <p class='f_type fw10 fwb'>協力廠商：</p>
+        <p class='f_type fw90'>GOGORO、中華EMOVING、當代牙醫、TOKUYO</p>
       </div>
     </div>
 
