--- a/traffic_03.html
+++ b/traffic_03.html
@@ -47,6 +47,16 @@
         height: 100%;
       }
     </style>
+
+    <!-- Global site tag (gtag.js) - Google Ads: 672890273 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-672890273"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'AW-672890273');
+    </script>
   </head>
   
   <body>
@@ -94,15 +104,87 @@
 
         <div class='news_box sbord'>
           <div class='plan_boxs'><a href="traffic.html">燈區位置圖</a></div>
-          <div class='plan_boxs'><a href="traffic_01.html">捷運/高鐵/火車</a></div>
+          <div class='plan_boxs'><a href="traffic_01.html">台鐵/機捷/高鐵</a></div>
           <div class='plan_boxs'><a href="traffic_02.html">公車/免費接駁車</a></div>
           <div class='plan_boxs'><a class='plan_ok' href="traffic_03.html">自行開車</a></div>
+          <div class='plan_boxs'><a href="traffic_04.html">交通管制資訊</a></div>
         </div>
 
-        <div class='news_box'>
-          <p class='p_title'>
-            敬請期待
-          </p>
+        <!-- 01 -->
+        <div class='lantern_boxs'>
+          <div class='lantern_title sec_title'>南下：</div>
+          <div class='program_boxs'>
+            <span class='padbot20'>
+              國道1號內壢交流道下往中壢方向 → 左轉台1線 → 右轉泰豐輪胎停車場 → 轉搭紅線接駁車
+            </span>
+          </div>
+        </div>
+
+        </br></br>
+        <!-- 02 -->
+        <div class='lantern_boxs'>
+          <div class='lantern_title sec_title'>北上：</div>
+          <div class='program_boxs'>
+            <span class='padbot20'>
+              國道1號中壢交流道下往中壢方向 → 左轉台1線 → 右轉七和路 → 停放六和停車場 → 轉搭綠線接駁車
+            </span>
+          </div>
+        </div>
+
+        </br></br>
+        <!-- 03 -->
+        <div class='lantern_boxs'>
+          <div class='lantern_title sec_title'>66快速道路：</div>
+          <div class='program_boxs'>
+            <span class='padbot20'>
+              平鎮二交流道往中壢方向接市道113線 → 右轉市道112線 → 左轉市道114線 → 右轉台1線 → 右轉泰豐輪胎停車場 → 轉搭紅線接駁車
+            </span>
+          </div>
+        </div>
+
+        </br></br>
+        <!-- 04 -->
+        <div class='lantern_boxs'>
+          <div class='lantern_title sec_title'>泰豐輪胎・停車場</div>
+          </br></br>
+          <div class='video-container'>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1808.5479089010196!2d121.23381065817328!3d24.96285442764401!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjTCsDU3JzQ2LjMiTiAxMjHCsDE0JzA1LjciRQ!5e0!3m2!1szh-TW!2stw!4v1579007377954!5m2!1szh-TW!2stw" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+          </div>
+        </div>
+
+        </br></br>
+        <!-- 05 -->
+        <div class='lantern_boxs'>
+          <div class='lantern_title sec_title'>六和・停車場</div>
+          </br></br>
+          <div class='video-container'>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1808.5265433831848!2d121.22612782473128!3d24.96430840335111!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjTCsDU3JzUxLjUiTiAxMjHCsDEzJzM2LjMiRQ!5e0!3m2!1szh-TW!2stw!4v1579007433752!5m2!1szh-TW!2stw" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+          </div>
+        </div>
+
+        </br></br>
+        <!-- 06 -->
+        <div class='lantern_boxs'>
+          <div class='lantern_title sec_title'>機車停車場：</div>
+          <div class='program_boxs'>
+            <span class='padbot20'>
+              ・中壢國中：約150席</br>
+              ・新勢國小：約600席</br>
+              ・新明地下公有收費停車場：250席</br>
+            </span>
+          </div>
+        </div>
+
+        </br></br>
+        <!-- 07 -->
+        <div class='lantern_boxs'>
+          <div class='lantern_title sec_title'>開放人行道停放機車：</div>
+          <div class='program_boxs'>
+            <span class='padbot20'>
+              ・環北路雙側人行道：環北路92號至環西路二段300巷</br>
+              ・康樂路單側人行道：中榮路至延平路</br>
+            </span>
+          </div>
         </div>
         
       </div>
@@ -123,6 +205,11 @@
       <div class='f_type_boxs'>
         <p class='f_type fw10 fwb'>協辦單位：</p>
         <p class='f_type fw90'>桃園市政府人事處、工務局、文化局、水務局、民政局、交通局、社會局、消防局、教育局、經發局、農業局、養工處、新聞處、衛生局、環保局、警察局、中壢區公所、平鎮區公所、交通部鐵道局、桃園大眾捷運股份有限公司、桃園航空城股份有限公司、桃園市新住民聯合服務中心</p>
+      </div>
+
+      <div class='f_type_boxs'>
+        <p class='f_type fw10 fwb'>協力廠商：</p>
+        <p class='f_type fw90'>GOGORO、中華EMOVING、當代牙醫、TOKUYO</p>
       </div>
     </div>
 
