--- a/traffic_04.html
+++ b/traffic_04.html
@@ -99,113 +99,19 @@
           <a class='tag_a' href="index.html">首頁</a>
           <a class='tag_a' href="traffic.html">交通資訊</a>
           <a class='tag_a' href="traffic.html">燈區位置圖</a>
-          <a class='tag_a' href="traffic_02.html">公車/免費接駁車</a>
+          <a class='tag_a' href="traffic_04.html">交通管制資訊</a>
         </div>
 
         <div class='news_box sbord'>
           <div class='plan_boxs'><a href="traffic.html">燈區位置圖</a></div>
           <div class='plan_boxs'><a href="traffic_01.html">台鐵/機捷/高鐵</a></div>
-          <div class='plan_boxs'><a class='plan_ok' href="traffic_02.html">公車/免費接駁車</a></div>
+          <div class='plan_boxs'><a href="traffic_02.html">公車/免費接駁車</a></div>
           <div class='plan_boxs'><a href="traffic_03.html">自行開車</a></div>
-          <div class='plan_boxs'><a href="traffic_04.html">交通管制資訊</a></div>
+          <div class='plan_boxs'><a class='plan_ok' href="traffic_04.html">交通管制資訊</a></div>
         </div>
-
         </br></br>
-        <div class='t_boxs to'>平鎮新勢公園(飛天曙光燈區)</div>
-        <div class='table'>
-          <div class='tr'>
-            <div class='td to tl tll' title='公車'>L208</div>
-            <div class='td to tll' title='行經路線'>內環黃線(免費公車)</div>
-            <div class='td to tll tdd' title='抵達燈區站牌名稱'>老街溪河川教育中心(中原路)</div>
-          </div>
-          <div class='tr'>
-            <div class='td to tl tll' title='公車'>301</div>
-            <div class='td to tll' title='行經路線'>桃園-楊梅</div>
-            <div class='td to tll tdd' title='抵達燈區站牌名稱'>新勢國小(新勢公園)</div>
-          </div>
-          <div class='tr'>
-            <div class='td to tl tll' title='公車'>5623</div>
-            <div class='td to tll' title='行經路線'>楊梅-捷運環北站(經中壢火車站)</div>
-            <div class='td to tll tdd' title='抵達燈區站牌名稱'>新勢國小(新勢公園)</div>
-          </div>
-        </div>
-
-        </br></br>
-        <!-- 02 -->
-        <div class='t_boxs to'>中壢光明公園(大地曙光燈區)</div>
-        <div class='table'>
-          <div class='tr'>
-            <div class='td to tl tll' title='公車'>L208</div>
-            <div class='td to tll' title='行經路線'>內環黃線(免費公車)</div>
-            <div class='td to tll tdd' title='抵達燈區站牌名稱'>中壢觀光夜市(新明路)</div>
-          </div>
-        </div>
-
-        </br></br>
-        <!-- 03 -->
-        <div class='t_boxs to'>中壢老街溪河岸公園(銀河曙光燈區)</div>
-        <div class='table'>
-          <div class='tr'>
-            <div class='td to tl tll' title='公車'>120</div>
-            <div class='td to tll' title='行經路線'>捷運環北站-太子鎮</div>
-            <div class='td to tll tdd' title='抵達燈區站牌名稱'>興國市場(中豐北路)</div>
-          </div>
-          <div class='tr'>
-            <div class='td to tl tll' title='公車'>132</div>
-            <div class='td to tll' title='行經路線'>中壢-中央大學-高鐵桃園站</div>
-            <div class='td to tll tdd' title='抵達燈區站牌名稱'>河川教育中心(中正路)</div>
-          </div>
-          <div class='tr'>
-            <div class='td to tl tll' title='公車'>L208</div>
-            <div class='td to tll' title='行經路線'>內環黃線(免費公車)</div>
-            <div class='td to tll tdd' title='抵達燈區站牌名稱'>興國市場(元化路二段)、中央中豐路口</div>
-          </div>
-          <div class='tr'>
-            <div class='td to tl tll' title='公車'>703</div>
-            <div class='td to tll' title='行經路線'>竹圍-中壢</div>
-            <div class='td to tll tdd' title='抵達燈區站牌名稱'>中央中豐路口</div>
-          </div>
-          <div class='tr'>
-            <div class='td to tl tll' title='公車'>5623</div>
-            <div class='td to tll' title='行經路線'>楊梅-捷運環北站(經中壢火車站)</div>
-            <div class='td to tll tdd' title='抵達燈區站牌名稱'>興國市場(中豐北路)</div>
-          </div>
-        </div>
-
-        <!-- 免費接駁車01 -->
-        </br></br>
-        <div class='show_boxs'>
-          <div class='show_box'>
-            <div class='sb_l'><img src="img/tt01.png"></div>
-            <div class='sb_r'>
-              <div class='s_name' title="免費接駁車：">紅線</div>
-              <div class='s_type'>
-                泰豐輪胎停車場 → 中壢聯合辦公大樓 → 第一銀行 → 飛天曙光燈區 → 中壢分局 → 中壢聯合辦公大樓 → 泰豐輪胎停車場
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class='video-container'>
-          <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1MLoePesLV9_UhyiLTlV5Ox_IFPOWlYDt" width="640" height="480"></iframe>
-        </div>
-
-        <!-- 免費接駁車02 -->
-        </br></br>
-        <div class='show_boxs'>
-          <div class='show_box'>
-            <div class='sb_l'><img src="img/tt02.png"></div>
-            <div class='sb_r'>
-              <div class='s_name' title="免費接駁車：">綠線</div>
-              <div class='s_type'>
-                六和停車場 → 機場捷運A21環北站 → 銀河曙光燈區 → 六和停車場
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class='video-container'>
-          <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1vexH0Hiv6Cgj6BEg-1oF4seayD3Jmcxq" width="640" height="480"></iframe>
-        </div>
-
+        <img src="img/tra02.png">
+        
       </div>
     </div>
 
