--- a/event_1.html
+++ b/event_1.html
@@ -30,6 +30,16 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="fav/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
+
+    <!-- Global site tag (gtag.js) - Google Ads: 672890273 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-672890273"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'AW-672890273');
+    </script>
   </head>
   
   <body>
@@ -78,8 +88,9 @@
           <div class='plan_boxs'><a href="event.html">特色活動</a></div>
           <div class='plan_boxs'><a class='plan_ok' href="event_1.html">燈會小提燈</a></div>
           <div class='plan_boxs'><a href="event_2.html">刷市民卡換小禮物</a></div>
-          <div class='plan_boxs'><a href="event_3.html">景點推薦</a></div>
+          <div class='plan_boxs'><a href="event_3.html">日遊桃園夜賞燈會</a></div>
           <div class='plan_boxs'><a href="event_4.html">手作提燈</a></div>
+          <div class='plan_boxs'><a href="event_5.html">合照送好禮</a></div>
         </div>
 
         <div class='news_box'>
@@ -140,6 +151,11 @@
       <div class='f_type_boxs'>
         <p class='f_type fw10 fwb'>協辦單位：</p>
         <p class='f_type fw90'>桃園市政府人事處、工務局、文化局、水務局、民政局、交通局、社會局、消防局、教育局、經發局、農業局、養工處、新聞處、衛生局、環保局、警察局、中壢區公所、平鎮區公所、交通部鐵道局、桃園大眾捷運股份有限公司、桃園航空城股份有限公司、桃園市新住民聯合服務中心</p>
+      </div>
+
+      <div class='f_type_boxs'>
+        <p class='f_type fw10 fwb'>協力廠商：</p>
+        <p class='f_type fw90'>GOGORO、中華EMOVING、當代牙醫、TOKUYO</p>
       </div>
     </div>
 
