--- a/event_2.html
+++ b/event_2.html
@@ -30,6 +30,16 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="fav/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
+
+    <!-- Global site tag (gtag.js) - Google Ads: 672890273 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-672890273"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'AW-672890273');
+    </script>
   </head>
   
   <body>
@@ -78,8 +88,9 @@
           <div class='plan_boxs'><a href="event.html">特色活動</a></div>
           <div class='plan_boxs'><a href="event_1.html">燈會小提燈</a></div>
           <div class='plan_boxs'><a class='plan_ok' href="event_2.html">刷市民卡換小禮物</a></div>
-          <div class='plan_boxs'><a href="event_3.html">景點推薦</a></div>
+          <div class='plan_boxs'><a href="event_3.html">日遊桃園夜賞燈會</a></div>
           <div class='plan_boxs'><a href="event_4.html">手作提燈</a></div>
+          <div class='plan_boxs'><a href="event_5.html">合照送好禮</a></div>
         </div>
 
         <div class='lantern_boxs'>
@@ -87,10 +98,15 @@
 
           <div class='program_boxs'>
             <span class='padbot20'>
-              活動期間每日6點起於新勢公園(飛天曙光燈區)、老街溪河岸公園(銀河曙光燈區)、光明公園(大地曙光燈區)服務台刷卡，即可兌換紀念品一份，數量有限，送完為止。
+              活動期間每日18:00-21:00起於新勢公園(飛天曙光燈區)、老街溪河岸公園(銀河曙光燈區)、光明公園(大地曙光燈區)服務台憑市民卡登錄，即可兌換紀念品一份(一卡一份)，數量有限，送完為止。還有機會抽「EMOVING Shine電動自行車」1台(市價42,000元) 。
             </span>
             <a href="https://card.tycg.gov.tw/ap/index.aspx" target="_blank">桃園市民卡主題網：https://card.tycg.gov.tw/ap/index.aspx</a>
+            <span class='s_span'>※ 得獎者須依中華民國稅法規定，繳交相關稅費。</span>
+            <span class='s_span'>※ 車輛顏色以實際出車顏色為主，照片僅供參考。</span>
+            </br></br>
             <img src="img/acpic012.jpg">
+            </br></br>
+            <img src="img/e04.png">
           </div>
         </div>
       </div>
@@ -111,6 +127,11 @@
       <div class='f_type_boxs'>
         <p class='f_type fw10 fwb'>協辦單位：</p>
         <p class='f_type fw90'>桃園市政府人事處、工務局、文化局、水務局、民政局、交通局、社會局、消防局、教育局、經發局、農業局、養工處、新聞處、衛生局、環保局、警察局、中壢區公所、平鎮區公所、交通部鐵道局、桃園大眾捷運股份有限公司、桃園航空城股份有限公司、桃園市新住民聯合服務中心</p>
+      </div>
+
+      <div class='f_type_boxs'>
+        <p class='f_type fw10 fwb'>協力廠商：</p>
+        <p class='f_type fw90'>GOGORO、中華EMOVING、當代牙醫、TOKUYO</p>
       </div>
     </div>
 
