--- a/news.html
+++ b/news.html
@@ -30,6 +30,16 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="fav/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
+
+    <!-- Global site tag (gtag.js) - Google Ads: 672890273 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-672890273"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'AW-672890273');
+    </script>
   </head>
   
   <body>
@@ -74,6 +84,10 @@
         </div>
 
         <div class='page_cent'>
+          <div class='news_box'>
+            <div class='n_date'>2020.01.20</div>
+            <a class='n_titel n_outlink' href='https://youtu.be/qeoyLTYpdPo' target="_blank">2020桃園燈會主題曲「曙光」mv</a>
+          </div>
           <div class='news_box'>
             <div class='n_date'>2020.01.17</div>
             <a class='n_titel n_outlink' href='https://www.youtube.com/watch?v=kTAYsTOaLkg&feature=youtu.be' target="_blank">2020桃園燈會1月底「燈」場 小提燈亮相</a>
@@ -155,6 +169,11 @@
       <div class='f_type_boxs'>
         <p class='f_type fw10 fwb'>協辦單位：</p>
         <p class='f_type fw90'>桃園市政府人事處、工務局、文化局、水務局、民政局、交通局、社會局、消防局、教育局、經發局、農業局、養工處、新聞處、衛生局、環保局、警察局、中壢區公所、平鎮區公所、交通部鐵道局、桃園大眾捷運股份有限公司、桃園航空城股份有限公司、桃園市新住民聯合服務中心</p>
+      </div>
+
+      <div class='f_type_boxs'>
+        <p class='f_type fw10 fwb'>協力廠商：</p>
+        <p class='f_type fw90'>GOGORO、中華EMOVING、當代牙醫、TOKUYO</p>
       </div>
     </div>
 
