--- a/traffic.html
+++ b/traffic.html
@@ -47,6 +47,16 @@
         height: 100%;
       }
     </style>
+
+    <!-- Global site tag (gtag.js) - Google Ads: 672890273 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-672890273"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'AW-672890273');
+    </script>
   </head>
   
   <body>
@@ -93,9 +103,10 @@
 
         <div class='news_box sbord'>
           <div class='plan_boxs'><a class='plan_ok' href="traffic.html">燈區位置圖</a></div>
-          <div class='plan_boxs'><a href="traffic_01.html">捷運/高鐵/火車</a></div>
+          <div class='plan_boxs'><a href="traffic_01.html">台鐵/機捷/高鐵</a></div>
           <div class='plan_boxs'><a href="traffic_02.html">公車/免費接駁車</a></div>
           <div class='plan_boxs'><a href="traffic_03.html">自行開車</a></div>
+          <div class='plan_boxs'><a href="traffic_04.html">交通管制資訊</a></div>
         </div>
 
         <!-- 01 -->
@@ -145,6 +156,11 @@
       <div class='f_type_boxs'>
         <p class='f_type fw10 fwb'>協辦單位：</p>
         <p class='f_type fw90'>桃園市政府人事處、工務局、文化局、水務局、民政局、交通局、社會局、消防局、教育局、經發局、農業局、養工處、新聞處、衛生局、環保局、警察局、中壢區公所、平鎮區公所、交通部鐵道局、桃園大眾捷運股份有限公司、桃園航空城股份有限公司、桃園市新住民聯合服務中心</p>
+      </div>
+
+      <div class='f_type_boxs'>
+        <p class='f_type fw10 fwb'>協力廠商：</p>
+        <p class='f_type fw90'>GOGORO、中華EMOVING、當代牙醫、TOKUYO</p>
       </div>
     </div>
 
