--- a/traffic_01.html
+++ b/traffic_01.html
@@ -47,6 +47,16 @@
         height: 100%;
       }
     </style>
+
+    <!-- Global site tag (gtag.js) - Google Ads: 672890273 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-672890273"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'AW-672890273');
+    </script>
   </head>
   
   <body>
@@ -89,20 +99,46 @@
           <a class='tag_a' href="index.html">首頁</a>
           <a class='tag_a' href="traffic.html">交通資訊</a>
           <a class='tag_a' href="traffic.html">燈區位置圖</a>
-          <a class='tag_a' href="traffic_01.html">捷運/高鐵/火車</a>
+          <a class='tag_a' href="traffic_01.html">台鐵/機捷/高鐵</a>
         </div>
 
         <div class='news_box sbord'>
           <div class='plan_boxs'><a href="traffic.html">燈區位置圖</a></div>
-          <div class='plan_boxs'><a class='plan_ok' href="traffic_01.html">捷運/高鐵/火車</a></div>
+          <div class='plan_boxs'><a class='plan_ok' href="traffic_01.html">台鐵/機捷/高鐵</a></div>
           <div class='plan_boxs'><a href="traffic_02.html">公車/免費接駁車</a></div>
           <div class='plan_boxs'><a href="traffic_03.html">自行開車</a></div>
+          <div class='plan_boxs'><a href="traffic_04.html">交通管制資訊</a></div>
         </div>
 
-        <div class='news_box'>
-          <p class='p_title'>
-            敬請期待
-          </p>
+        <!-- 01 -->
+        <div class='lantern_boxs'>
+          <div class='lantern_title sec_title'>台鐵中壢站：</div>
+          <div class='program_boxs'>
+            <span class='padbot20'>
+              <b>銀河曙光燈區：</b>步行中正路 → 老街溪河岸公園</br>
+              <b>飛天曙光燈區：</b>左轉中和路 → 左轉延平路 → 新勢公園
+            </span>
+          </div>
+        </div>
+
+        <!-- 02 -->
+        <div class='lantern_boxs'>
+          <div class='lantern_title sec_title'>機場捷運A21環北站：</div>
+          <div class='program_boxs'>
+            <span class='padbot20'>
+              <b>大地曙光燈區：</b>左轉中豐北路 → 右轉環北路 → 左轉民權路 → 光明公園
+            </span>
+          </div>
+        </div>
+
+        <!-- 03 -->
+        <div class='lantern_boxs'>
+          <div class='lantern_title sec_title'>高鐵桃園站：</div>
+          <div class='program_boxs'>
+            <span class='padbot20'>
+              <b>大地曙光燈區：</b>轉乘機場捷運A21環北站 → 左轉中豐北路 → 右轉環北路 → 左轉民權路 → 光明公園 
+            </span>
+          </div>
         </div>
         
       </div>
@@ -123,6 +159,11 @@
       <div class='f_type_boxs'>
         <p class='f_type fw10 fwb'>協辦單位：</p>
         <p class='f_type fw90'>桃園市政府人事處、工務局、文化局、水務局、民政局、交通局、社會局、消防局、教育局、經發局、農業局、養工處、新聞處、衛生局、環保局、警察局、中壢區公所、平鎮區公所、交通部鐵道局、桃園大眾捷運股份有限公司、桃園航空城股份有限公司、桃園市新住民聯合服務中心</p>
+      </div>
+
+      <div class='f_type_boxs'>
+        <p class='f_type fw10 fwb'>協力廠商：</p>
+        <p class='f_type fw90'>GOGORO、中華EMOVING、當代牙醫、TOKUYO</p>
       </div>
     </div>
 
